group = 'me.TechsCode'
version = '1.0'

apply plugin: 'java'

apply plugin: 'groovy'
apply plugin: 'maven'

sourceCompatibility = 1.8
targetCompatibility = 1.8

buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
    }
}

dependencies {
    compile gradleApi()

    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile "com.googlecode.json-simple:json-simple:1.1.1"
    runtime "com.github.jengelman.gradle.plugins:shadow:5.2.0"
}

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()

    /*
    flatDir {
        dirs 'libs'
    }*/
}

// Removing Version from Output File
jar {
    version = null
}
